--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Simaple"
         tools:targetApi="31">
+        <activity android:name=".date.TimeZoneSetting"/>
         <activity android:name="com.advantech.simpale.RotateControlActivity"
             android:exported="true"/>
         <activity android:name="com.advantech.simpale.AppManagerActivity"
